src/test/deca/context/valid/multiple_multiplications.deca
// Fichier deca avec deux multiplications à la suite
{
  int x = 1 * 2 * 3;
}
