src/test/deca/context/invalid/rvalue_init_bool_to_int_inclass.deca
// Test la règle 3.28: 

class A  {
    int x = true;
}



// Resultat:
//TODOTEST
